[package]
name = "moho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
color-eyre = "0.6.2"
edit = "0.1.4"

[dev-dependencies]
pretty_assertions = "1.2.1"
