[package]
name = "moho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive", "wrap_help"] }
color-eyre = "0.6.2"
edit = "0.1.4"
rustyline = "10.0.0"
serde = "1.0.139"
serde_derive = "1.0.139"
toml = "0.5.9"

[dev-dependencies]
pretty_assertions = "1.2.1"
